<resources xmlns:xliff="urn:oasis:names:tc:xliff:document:1.2">
    <string name="app_name">TLKGUI</string>
    <string name="action_settings">Settings</string>
    <string name="hello_world">Hello world!</string>
     <string name="soft_update_true">确定</string>
    <string name="soft_update_no">已经是最新版本</string>
    <string name="soft_update_title">更新提示</string>
    <string name="soft_update_info">需要安装新软件</string>
    <string name="soft_update_updatebtn">是</string>
    <string name="soft_update_later">否</string>
    <string name="soft_updating">正在更新</string>
    <string name="soft_update_cancel">取消</string>
    <string name="soft_down_info">需要下载该应用吗？</string>
    <string name="soft_downting">正在下载</string>
    <string name="language_settings" msgid="5292716747264442359">"Language"</string>
    <string name="language_keyboard_settings_title" msgid="243220021717425813">"语言"</string>
    <string name="language_settings_category" msgid="2288258489940617043">"语言设置"</string>
    <string name="keyboard_settings_category" msgid="8275523930352487827">"键盘和输入法"</string>
    <string name="phone_language" msgid="8870144109924299673">"Language"</string>
    <string name="phone_language_summary" msgid="3871309445655554211"></string>
    <string name="auto_replace" msgid="6199184757891937822">"自动替换"</string>
    <string name="auto_replace_summary" msgid="370288728200084466">"更正错误输入的字词"</string>
    <string name="auto_caps" msgid="6379232078052591265">"自动大写"</string>
    <string name="auto_caps_summary" msgid="6358102538315261466">"将句首字母大写"</string>
    <string name="auto_punctuate" msgid="4595367243950425833">"自动加标点"</string>
    <string name="current_input_method" >"默认"</string>
    <string name="keyboard_layout_default_label" msgid="2952672513543482165">"默认"</string>
     <string name="global_locale_change_title" msgid="5956281361384221451">"更改语言"</string>
      <string name="app_notifications_switch_label" msgid="9124072219553687583">"显示通知"</string>
    <string name="help_label" >"帮助"</string>
    <string name="lock_settings_picker_title" >"选择屏幕锁定方式"</string>
    <string name="display_settings" msgid="1708697328627382561">"Display Settings"</string>
    <string name="screen_timeout_summary" msgid="327761329263064327">"无操作 <xliff:g id="TIMEOUT_DESCRIPTION">%1$s</xliff:g>后"</string>
    <string name="summary_font_size" translatable="false">%1$s</string>
     <string name="global_font_change_title" msgid="1887126466191012035">"更改字体大小"</string>
    <string name="global_change_warning" product="default" msgid="2461264421590324675">"此设置会影响这部手机上的所有用户。"</string>
    <string name="screen_settings">屏幕设置</string>
    <string name="screen_interface">显示输出接口</string>
    <string name="screen_iface_lcd_title">LCD</string>
    <string name="screen_iface_hdmi_title">HDMI</string>
    <string name="screen_iface_vga_title">VGA</string>
    <string name="screen_iface_ypbpr_title">YPbPr</string>
    <string name="screen_iface_tv_title">TV</string>
    <string name="screen_mode_title">Mode</string>
    <string name="screen_mode_switch_title">Do you want to save this screen display settings?</string>
    <string name="screen_control_ok_title">save</string>
    <string name="screen_control_cancel_title">cancel</string>
    <string name="screenscale">ScreenScale</string>
     <string name="wifi_security_short_eap">802.1x</string>
     <string name="wifi_security_eap">802.1x EAP</string>
      <string name="wifi_security_short_wpa">WPA</string>
     <string name="wifi_security_wpa">WPA PSK</string>
      <string name="wifi_security_short_wpa2">WPA2</string>
      <string name="wifi_security_wpa2">WPA2 PSK</string>
      <string name="wifi_security_short_wpa_wpa2">WPA/WPA2</string>
     <string name="wifi_security_wpa_wpa2">WPA/WPA2 PSK</string>
    <string name="wifi_security_short_psk_generic">@string/wifi_security_short_wpa_wpa2</string>
     <string name="wifi_security_psk_generic">@string/wifi_security_wpa_wpa2</string>
     <string name="wifi_security_short_wep">WEP</string>
        <string name="wifi_security_wep">WEP</string>
     <string name="wifi_security_none">None</string>
      <string name="wifi_not_in_range">Not in range</string>
      <string name="wifi_disabled_password_failure">Authentication problem</string>
     <string name="wifi_disabled_network_failure">Avoided poor Internet connection</string>
      <string name="wifi_disabled_generic">Disabled</string>
       <string name="wifi_remembered">Saved</string>
         <string name="wifi_secured_first_item">Secured with <xliff:g id="wifi_security_short">%1$s</xliff:g></string>
           <string name="wifi_secured_second_item">, secured with <xliff:g id="wifi_security_short">%1$s</xliff:g></string>
            <string name="wifi_wps_available_first_item">WPS available</string>
            <string name="wifi_wps_available_second_item">\u0020(WPS available)</string>
               <string name="wifi_title">WIFI</string>
                 <string name="currentWifiInfoTitle">Net state</string>
                 <string name="netStatusTitle">Network Status</string>
                 <string name="netTypeTitle">Connect Format</string>
                 <string name="netIpTitle">IP Address</string>
           <string name="netMacTitle">MAC</string>
          <string name="wifi_settings">Wi-Fi</string>
          <string name="wifi_failed_connect_message">Failed to connect to network</string>
          <string name="wifi_failed_save_message">Failed to save network</string>
          <string name="wifi_failed_forget_message">Failed to forget network</string>
          <string name="wifi_fail_to_scan">Can\'t scan for networks</string>
          <string name="wifi_wps_setup_title">Wi-Fi Protected Setup</string>
          <string name="wifi_wps_failed">Couldn\'t start WPS, try again.</string>
          <string name="wifi_wps_in_progress">WPS is already in progress and can take up to two minutes to complete</string>
          <string name="wifi_wps_pin_output">Type the PIN  on the access point</string>
          <string name="wifi_starting">Turning Wi-Fi on\u2026</string>
          <string name="wifi_stopping">Turning off Wi-Fi\u2026</string>
          <string name="wifi_empty_list_wifi_off">To see available networks, turn Wi-Fi on.</string>
          <string name="eth_net_work">有线网络</string>
          <string name="net_work_online">online</string>
          <string name="wifi_net_work">WIFI</string>
          <string name="no_net_work">Disconnected</string>
          <string name="no_net_work_please">No network, please check the network connection</string>
            <string name="proxy_port_label">Proxy port</string>
             <string name="proxy_exclusionlist_label">Bypass proxy for</string>
               <string name="proxy_hostname_label">Proxy hostname</string>
             <string name="proxy_action_text">Done</string>
              <string name="proxy_clear_text">Clear</string>
              <string name="proxy_defaultView_text">Restore defaults</string>
              <string name="proxy_error">Attention</string>
               <string name="proxy_error_dismiss">OK</string>
             <string name="proxy_error_invalid_host">The hostname you typed isn\'t valid.</string>
              <string name="proxy_error_invalid_exclusion_list">The exclusion list you typed isn\'t properly formatted. Type a comma-separated list of excluded domains.</string>
                 <string name="proxy_error_empty_port">You need to complete the port field.</string>
              <string name="proxy_error_empty_host_set_port">The port field must be empty if the host field is empty.</string>
              <string name="proxy_error_invalid_port">The port you typed isn\'t valid.</string>
              <string name="wifi_setup_eap_not_supported">You can\'t configure an EAP Wi-Fi connection during setup. After setup, you can do that in Settings &gt; Wireless &amp; networks.</string>
                 <string name="wifi_ssid">Network SSID</string>
                     <string name="wifi_password">Password</string>
                         <string name="wifi_show_password">Show password</string>
                         <string name="wifi_security">Security</string>
                          <string name="wifi_eap_method">EAP method</string>
                              <string name="please_select_phase2">Phase 2 authentication</string>
                                 <string name="wifi_eap_ca_cert">CA certificate</string>
                                    <string name="wifi_eap_user_cert">User certificate</string>
                                  <string name="wifi_eap_identity">Identity</string>
               <string name="wifi_eap_anonymous">Anonymous identity</string>
                  <string name="proxy_settings_title">Proxy settings</string>
                 <string name="proxy_warning_limited_support">The HTTP proxy is used by the browser but may not be used by the other apps.</string>
                   <string name="wifi_ip_settings">IP settings</string>
                      <string name="wifi_ip_address">IP address</string>
                        <string name="wifi_gateway">Gateway</string>
                         <string name="wifi_network_prefix_length">Network prefix length</string>
                       <string name="wifi_dns1">DNS 1</string>
                           <string name="wifi_dns2">DNS 2</string>
                              <string name="wifi_add_network">Add network</string>
                      <string name="wifi_show_advanced">Show advanced options</string>
                       <string name="proxy_hostname_hint">proxy.example.com</string>
                        <string name="proxy_port_hint" translatable="false">8080</string>
                          <string name="proxy_exclusionlist_hint">example.com,mycomp.test.com,localhost</string>
                         <string name="wifi_ip_address_hint" translatable="false">192.168.1.128</string>
                          <string name="wifi_gateway_hint" translatable="false">192.168.1.1</string>
                           <string name="wifi_network_prefix_length_hint" translatable="false">24</string>
                           <string name="wifi_dns1_hint" translatable="false">8.8.8.8</string>
                            <string name="wifi_dns2_hint" translatable="false">8.8.4.4</string>
                             <string name="wifi_save">Save</string>
                              <string name="wifi_status">Status</string>
                                <string name="wifi_speed">Link speed</string>
    <string name="wifi_quick_toggle_title">Wi\u2011Fi</string>
    <string name="wifi_quick_toggle_summary">Turn on Wi\u2011Fi</string>
    <string name="wifi_settings_category">Wi\u2011Fi settings</string>
    <string name="wifi_settings_title">Wi\u2011Fi</string>
    <string name="wifi_settings_summary">Set up &amp; manage wireless access points</string>
    <string name="wifi_setup_wizard_title">Select Wi\u2011Fi</string>
                       <string name="tianlaikge_title">USING</string>
        <string name="tianlaikge_kaiqiwomen">Connect people with joy </string>
        <string name="tianlaikge_zhubopingdao">Anchor channel</string>
        <string name="tianlaikge_diangetai">Music library</string>
        <string name="tianlaikge_gerenzhuye">Homepage</string>
        <string name="tianlaikge_huodong">Events</string>
        <string name="tianlaikge_mangguotv">Mango TV</string>
        <string name="tianlaikge_paihangbang">Top list</string>
        <string name="tianlaikge_shangchang">Accessory store</string>
        <string name="tianlaikge_shezhi">Settings</string>
        <string name="tianlaikge_guanji">Power off</string>
        <string name="display_settings_title_hou">Display Settings</string>
        <string name="title_alert">提示</string>
       <string name="ok">OK</string>
       <string name="cancel">Cancel</string>
</resources>