<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/app_bg" >

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginLeft="45dp"
        android:layout_marginTop="30dp"
        android:gravity="center_vertical"
        android:orientation="horizontal" >

        <ImageView
            android:layout_width="65dp"
            android:layout_height="65dp"
            android:background="@drawable/icon" />

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="10dp"
            android:orientation="vertical"
            android:visibility="gone" >

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/tianlaikge_title"
                android:textColor="@color/white"
                android:textSize="28sp" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/tianlaikge_kaiqiwomen"
                android:textColor="@color/white"
                android:textSize="20sp" />
        </LinearLayout>
    </LinearLayout>

    <DigitalClock
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="35dp"
        android:textColor="@color/white"
        android:textSize="40sp" />

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentRight="true"
        android:layout_marginRight="45dp"
        android:orientation="horizontal" >

      

        <ImageView
            android:id="@+id/secondMic"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="25dp"
            android:layout_marginTop="35dp"
            android:background="@drawable/mic_grey" />

        <ImageView
            android:id="@+id/img_wifi"
            android:layout_width="40dp"
            android:layout_height="40dp"
            android:layout_marginLeft="40dp"
            android:layout_marginTop="30dp"
            android:src="@drawable/wifi4" />
    </LinearLayout>

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginTop="100dp"
        android:gravity="center_horizontal" >

        <Button
            android:id="@+id/btn_yy"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="30dp"
            android:background="@drawable/selector_home_yy_mask"
            android:paddingTop="25dp"
            android:text="@string/tianlaikge_zhubopingdao"
            android:textColor="@color/white"
            android:textSize="28sp" />

        <Button
            android:id="@+id/btn_mv"
            android:layout_width="470dip"
            android:layout_height="wrap_content"
            android:layout_alignTop="@+id/btn_yy"
            android:layout_marginLeft="10dp"
            android:layout_toRightOf="@+id/btn_yy"
            android:background="@drawable/selector_mv_mask"
            android:paddingTop="110dp"
            android:text="@string/tianlaikge_diangetai"
            android:textColor="@color/white"
            android:textSize="28sp" />

       <!--  <FrameLayout
            android:id="@+id/geren_home"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignTop="@+id/btn_mv"
            android:layout_marginLeft="10dp"
            android:layout_toRightOf="@+id/btn_mv" 
            android:background="@drawable/selector_home_me"
            android:clickable="true"
            android:focusable="true" >

            <ImageView
                android:id="@+id/img_geren"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="85dip"
                android:layout_marginTop="75dip"
                android:background="@drawable/home_me_icon" />
            
            <TextView
                android:id="@+id/btn_home_me"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="61dip"
                android:layout_marginTop="70dip"
                android:paddingTop="80dp"
                android:text="@string/tianlaikge_gerenzhuye"
                android:textColor="@color/white"
                android:textSize="28sp" />

            
        </FrameLayout> -->
        
        
        <Button
            android:id="@+id/btn_home_me"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignTop="@+id/btn_mv"
            android:layout_marginLeft="10dp"
            android:layout_toRightOf="@+id/btn_mv"
            android:background="@drawable/selector_home_me"
            android:paddingTop="85dp"
            android:text="@string/tianlaikge_gerenzhuye"
            android:textColor="@color/white"
            android:textSize="28sp" />
        
        

        <Button
            android:id="@+id/btn_movable"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignTop="@+id/btn_home_me"
            android:layout_marginLeft="10dp"
            android:layout_toRightOf="@+id/btn_home_me"
            android:background="@drawable/selector_movable"
            android:paddingTop="85dp"
            android:text="@string/tianlaikge_huodong"
            android:textColor="@color/white"
            android:textSize="28sp" />

        <Button
            android:id="@+id/btn_down"
            android:layout_width="233dip"
            android:layout_height="wrap_content"
            android:layout_alignLeft="@+id/btn_yy"
            android:layout_below="@+id/btn_yy"
            android:layout_marginTop="10dp"
            android:background="@drawable/selector_down"
            android:paddingTop="85dp"
            
            android:text="@string/tianlaikge_mangguotv"
            android:textColor="@color/white"
            android:textSize="28sp" />

        <!-- android:text="@string/tianlaikge_xiazaishoujiban" -->
        <Button
            android:id="@+id/btn_rank"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignTop="@+id/btn_down"
            android:layout_marginLeft="10dp"
            android:layout_toRightOf="@+id/btn_down"
            android:background="@drawable/selector_home_rank_mask"
            android:paddingTop="85dp"
            android:text="@string/tianlaikge_paihangbang"
            android:textColor="@color/white"
            android:textSize="28sp" />

        <Button
            android:id="@+id/btn_shopping"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignTop="@+id/btn_rank"
            android:layout_marginLeft="10dp"
            android:layout_toRightOf="@+id/btn_rank"
            android:background="@drawable/selector_shopping"
            android:paddingTop="85dp"
            android:text="@string/tianlaikge_shangchang"
            android:textColor="@color/white"
            android:textSize="28sp" />

        <Button
            android:id="@+id/btn_settings"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignTop="@+id/btn_shopping"
            android:layout_marginLeft="10dp"
            android:layout_toRightOf="@+id/btn_shopping"
            android:background="@drawable/selector_settings"
            android:paddingTop="85dp"
            android:text="@string/tianlaikge_shezhi"
            android:textColor="@color/white"
            android:textSize="28sp" />

        <Button
            android:id="@+id/btn_manguo"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignTop="@+id/btn_settings"
            android:layout_marginLeft="10dp"
            android:layout_toRightOf="@+id/btn_settings"
            android:background="@drawable/selector_manguo"
            android:paddingTop="85dp"
            android:text="@string/tianlaikge_guanji"
            android:textColor="@color/white"
            android:textSize="28sp" />
    </RelativeLayout>

</RelativeLayout>