<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:clickable="true"
    android:orientation="vertical"
    android:padding="20.0dip" >

    <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:background="#cc000000"
        android:orientation="vertical" >

        <TextView
            android:id="@+id/title"
            style="@style/text_18_ffffff"
            android:layout_width="fill_parent"
            android:layout_height="40.0dip"
            android:layout_marginLeft="5dip"
            android:gravity="left|center"
            android:text="@string/title_alert"
            android:textSize="24sp"
            android:visibility="visible" />

        <View
            android:layout_width="fill_parent"
            android:layout_height="0.5px"
            android:background="#ffffffff" />

        <LinearLayout
            android:id="@+id/content"
            android:layout_width="fill_parent"
            android:layout_height="120dip"
            android:layout_marginTop="60dip"
            android:gravity="center" >

            <TextView
                android:id="@+id/message"
                style="@style/text_16_666666"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:lineSpacingMultiplier="1.5"
                android:minHeight="120.0dip"
                android:paddingBottom="15.0dip"
                android:paddingLeft="20.0dip"
                android:paddingRight="20.0dip"
                android:paddingTop="15.0dip" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="fill_parent"
            android:layout_height="100.0dip"
            android:layout_gravity="bottom"
            android:gravity="center"
            android:orientation="horizontal" >

            <Button
                android:id="@+id/positiveButton"
                style="@style/text_15_ffffff_sdw"
                android:layout_width="174.0dip"
                android:layout_height="40.0dip"
                android:background="#ff8b89ff"
                android:gravity="center"
                android:text="@string/ok" 
                />

            <Button
                android:id="@+id/negativeButton"
                style="@style/text_15_666666_sdw"
                android:layout_width="174.0dip"
                android:layout_height="40.0dip"
                android:layout_marginLeft="50.0dip"
                android:background="#33ffffff"
                android:gravity="center"
                android:text="@string/cancel" />

            <!-- android:background="@drawable/btn_cancel_selector" -->
        </LinearLayout>
    </LinearLayout>

</FrameLayout>