<?xml version="1.0" encoding="utf-8"?>
<!--$_FOR_ROCKCHIP_RBOX_$-->
<!--$_rbox_$_modify_$_chenxiao: add "brightness" key-->
<!-- Copyright (C) 2010 The Android Open Source Project

     Licensed under the Apache License, Version 2.0 (the "License");
     you may not use this file except in compliance with the License.
     You may obtain a copy of the License at

          http://www.apache.org/licenses/LICENSE-2.0

     Unless required by applicable law or agreed to in writing, software
     distributed under the License is distributed on an "AS IS" BASIS,
     WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
     See the License for the specific language governing permissions and
     limitations under the License.
-->

<PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android"
        android:title="@string/display_settings"
        xmlns:settings="http://schemas.android.com/apk/res/com.android.settings">

       <!--  <com.android.settings.BrightnessPreference
            	android:key="brightness"
                android:title="@string/brightness"
                android:persistent="false"/>

        <PreferenceScreen
                android:key="wallpaper"
                android:title="@string/wallpaper_settings_title"
                android:fragment="com.android.settings.WallpaperTypeSettings" />
 -->
       <!--  <CheckBoxPreference
            android:key="accelerometer"
            android:title="@string/accelerometer_title"/> -->

        <!-- <ListPreference
                android:key="screen_timeout"
                android:title="@string/screen_timeout"
                android:summary="@string/screen_timeout_summary"
                android:persistent="false"
                android:entries="@array/screen_timeout_entries"
                android:entryValues="@array/screen_timeout_values" /> -->

       <!--  <PreferenceScreen
                android:key="screensaver"
                android:title="@string/screensaver_settings_title"
                android:fragment="com.android.settings.DreamSettings" /> -->

        <!-- <com.android.settings.WarnedListPreference
                android:key="font_size"
                android:title="@string/title_font_size"
                android:summary="@string/summary_font_size"
                android:entries="@array/entries_font_size"
                android:entryValues="@array/entryvalues_font_size"
                android:dialogTitle="@string/dialog_title_font_size" /> -->

       <!--  <CheckBoxPreference
            android:key="notification_pulse"
            android:title="@string/notification_pulse_title"
            android:persistent="false" /> -->

      
      <Preference android:key="screenscale"
                android:title="@string/display_settings_title_hou"
                android:icon="@drawable/wifi_setting_iconc"
                android:layout="@layout/custom_preference_2_title"
                android:selectable="false"  >               
            
        </Preference>
      
	<Preference android:key="screenscale"
                android:title="@string/screenscale"
                android:dialogTitle="@string/screenscale"
                android:layout="@layout/custom_preference"  >               
            <intent
            	android:action="android.intent.action.MAIN"
            	android:targetPackage="com.android.settings"
            	android:targetClass="com.android.settings.screen.ScreenScaleActivity" />
        </Preference>
        <ListPreference
                android:key="main_screen_interface"
               />

        <ListPreference
                android:key="main_screen_mode"
                android:enabled="false"
                />
        
        
        <Preference
                android:key="main_screen_1920_1080p_60"
                android:title="1920x1080p-60"
               android:icon="@drawable/hdmi_1"
                android:layout="@layout/custom_preference_hdmi_out"
                
                />
        <Preference
                android:key="main_screen_1920_1080p_50"
                android:title="1920x1080p-50"
                android:icon="@drawable/hdmi_1"
                android:layout="@layout/custom_preference_hdmi_out"
                />
        
        <Preference
                android:key="main_screen_1920_1080i_60"
                android:title="1920x1080i-60"
                android:icon="@drawable/hdmi_1"
                android:layout="@layout/custom_preference_hdmi_out"/>
        <Preference
                android:key="main_screen_1920_1080i_50"
                android:title="1920x1080i-50"
                android:icon="@drawable/hdmi_1"
                android:layout="@layout/custom_preference_hdmi_out"/>
        <Preference
                android:key="main_screen_1280_720p_60"
                android:title="1280x720p-60"
                android:icon="@drawable/hdmi_1"
                android:layout="@layout/custom_preference_hdmi_out"/>
        <Preference
                android:key="main_screen_1280_720p_50"
                 android:title="1280x720p-50"
                 android:icon="@drawable/hdmi_1"
                android:layout="@layout/custom_preference_hdmi_out"/>
        <Preference
                android:key="main_screen_720_576i_60"
                 android:title="720x576i-60"
                 android:icon="@drawable/hdmi_1"
                android:layout="@layout/custom_preference_hdmi_out"/>
        <Preference
                android:key="main_screen_720_576p_60"
                 android:title="720x576p-60"
                 android:icon="@drawable/hdmi_1"
                android:layout="@layout/custom_preference_hdmi_out"/>
        <Preference
                android:key="main_screen_720_480p_60"
                 android:title="720x480p-60"
                 android:icon="@drawable/hdmi_1"
                android:layout="@layout/custom_preference_hdmi_out"/>
        <Preference
                android:key="main_screen_720_480i_60"
                 android:title="720x480i-60"
                 android:icon="@drawable/hdmi_1"
                android:layout="@layout/custom_preference_hdmi_out"/>
        
       
        
        
        
        
        
        
        
        <ListPreference
                android:key="aux_screen_interface"/>
        <ListPreference
                android:key="aux_screen_mode"/>
        <!-- $_rbox_$_modify_$_end -->
</PreferenceScreen>
